--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 rayon = "1.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-num-bigint = "0.4"
+num-bigint = { version = "0.4", features = ["rand"] }
 hex = "0.4"
 base58 = "0.2"
 sha2 = "0.10"
