--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,7 @@ bech32 = "0.9"
 rand = "0.8"
 secp256k1 = { version = "0.28", features = ["rand"] }
 num-traits = "0.2"
-
-[dev-dependencies]
-tempfile = "3"
+ctrlc = "3.4"
 
 [lib]
 name = "btc_key_matcher"
